CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(LIBRARY_NAME database)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

IF(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG /MDd")
    SET(BUILD_SHARED_LIBS NO)
ELSE()
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "../../lib")
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../bin")
    SET(BUILD_SHARED_LIBS YES)
ENDIF()

SET(HEADER_FILES
    database_base.h database_types.h
    database_manager.h postgres_manager.h)

SET(SOURCE_FILES
    database_manager.cpp postgres_manager.cpp)

PROJECT(${LIBRARY_NAME} VERSION 1.0.0.0)

ADD_LIBRARY(${LIBRARY_NAME} ${HEADER_FILES} ${SOURCE_FILES})
    
FIND_PACKAGE(PostgreSQL REQUIRED)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC PostgreSQL::PostgreSQL)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ../utilities)
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ../container)

ADD_DEPENDENCIES(${LIBRARY_NAME} container)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC container)