CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(LIBRARY_NAME database)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

SET(HEADER_FILES
    database_base.h database_types.h
    database_manager.h postgres_manager.h)

SET(SOURCE_FILES
    database_manager.cpp postgres_manager.cpp)

PROJECT(${LIBRARY_NAME} VERSION 1.0.0.0)

IF(BUILD_SHARED_LIBS)
    ADD_LIBRARY(${LIBRARY_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
ELSE()
    ADD_LIBRARY(${LIBRARY_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
ENDIF()
    
FIND_PACKAGE(PostgreSQL REQUIRED)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC PostgreSQL::PostgreSQL)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ../utilities)
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ../container)

ADD_DEPENDENCIES(${LIBRARY_NAME} container)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PUBLIC container)